--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,9 +209,9 @@ section .title::after{
 }
 
 /* about section styling */
-.about .title::after{
+/* .about .title::after{
     content: "who i am";
-}
+} */
 .about .about-content .left{
     width: 45%;
 }
